--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,14 @@
 
     }
 
+.h1{
+ 
+     text-decoration: none;
+    font-size: 17px;  
+     font-family:cursive;
+     font-family:caption
 
-
+  }
 
 h2{
     font-size: 3vw;
@@ -193,3 +199,4 @@ button{
 
 
 </html>
+
